# numpy-opencv-converter

./: CMakeLists.txt
cmake/: boost-python.cmake
utils/: conversion.cpp  conversion.h
